--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,6 @@ export(gather_budget)
 export(identify_ou)
 export(import_fast)
 export(limit_fast)
-export(run_fast)
+export(run_fastR)
 export(sep_cols)
 importFrom(magrittr,"%>%")
