--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export("%>%")
 export(gather_budget)
 export(identify_ou)
 export(import_fast)
-export(limit_fast)
+export(limit_inter)
 export(run_fastR)
 export(sep_cols)
 importFrom(magrittr,"%>%")
