add limit function to initiatives tab

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(gather_budget)
 export(identify_ou)
 export(import_fast)
+export(limit_init)
 export(limit_inter)
 export(run_fastR)
 export(sep_cols)
