add function to import commodities tab

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(gather_init)
 export(gather_inter)
 export(identify_ou)
 export(import_fast)
+export(is_oldformat)
+export(limit_comm)
 export(limit_init)
 export(limit_inter)
 export(run_fastR)
