--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,19 @@
 
 export("%>%")
 export(extract_ou)
+export(gather_codb)
 export(gather_cross)
 export(gather_init)
 export(gather_inter)
 export(identify_ou)
 export(import_fast)
 export(is_oldformat)
+export(limit_codb)
 export(limit_comm)
 export(limit_cross)
 export(limit_init)
 export(limit_inter)
 export(run_fastR)
 export(sep_cols)
+export(var_exists)
 importFrom(magrittr,"%>%")
