--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(gather_codb)
 export(gather_cross)
 export(gather_init)
 export(gather_inter)
+export(handle_missing_inter)
 export(identify_ou)
 export(import_fast)
 export(is_oldformat)
