add fcn to determine if FAST is regional

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(handle_missing_inter)
 export(identify_ou)
 export(import_fast)
 export(is_oldformat)
+export(is_regional)
 export(limit_codb)
 export(limit_comm)
 export(limit_cross)
