add a self service option to the package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(limit_cross)
 export(limit_init)
 export(limit_inter)
 export(run_fastR)
+export(selfservice)
 export(sep_cols)
 export(var_exists)
 importFrom(magrittr,"%>%")
