--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,15 @@
 export("%>%")
 export(combo_fastR)
 export(extract_ou)
+export(extract_ou_cop20)
 export(gather_codb)
 export(gather_cross)
 export(gather_init)
 export(gather_inter)
+export(gather_inter_cop20)
 export(handle_missing_inter)
 export(identify_ou)
+export(identify_ou_cop20)
 export(import_fast)
 export(is_oldformat)
 export(is_regional)
@@ -17,8 +20,11 @@ export(limit_comm)
 export(limit_cross)
 export(limit_init)
 export(limit_inter)
+export(limit_inter_cop20)
 export(run_fastR)
+export(run_fastR_cop20)
 export(selfservice)
 export(sep_cols)
+export(sep_cols_cop20)
 export(var_exists)
 importFrom(magrittr,"%>%")
